# stringmatch-bench

./: README.md
data/: random10.txt  random20.txt  random50.txt
python/: .gitignore  noxfile.py  requirements-dev.txt
python/tests/: dataset.py
rust/: Cargo.toml
rust/benches/: search.rs
rust/src/: measure.rs
